manifests/klima-api/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: klima-api
  namespace: klima-api
  labels:
    app: klima-api
spec:
  replicas: 1
  template:
    metadata:
      name: klima-api
      labels:
        app: klima-api
    spec:
      containers:
      - name: klima-api
        image: ubergesundheit/unims-kli-api
        ports:
        - name: api
          containerPort: 8080
