manifests/klima-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: klima-api
  namespace: default
  labels:
    app: klima-api
spec:
  ports:
    - port: 8080
      protocol: TCP
      name: api
  selector:
    app: klima-api
